--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,72 @@
+html
+{
+    background-color: rgb(163, 82, 150);
+    font-family: 'Rubik', sans-serif;
+}
 
+body
+{
+    background-color: white;
+    width: 500px;
+    height: 330px;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 10px auto; 
+}
+
+#b_login
+{
+    display: block;
+    width: 12.3em;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 8px;
+    text-align: center;
+}
+
+input
+{
+    color: black;
+    background-color: white;
+    border-radius: 10px;
+    display: block;
+}
+
+button
+{
+    border-radius: 10px;
+    color: black;
+    background-color: rgb(163, 82, 150);
+    display: block;
+    margin-top: 1em;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+img
+{
+    width: 40px;
+    height: 40px;
+    display: block;
+    margin: 0 auto;
+}
+
+button:hover
+{
+    color:gray;
+}
+
+#author
+{
+    margin-left: 1em;
+    color: black;
+    cursor: default;
+    text-decoration: none;
+}
+
+#pl
+{
+    display: block;
+    margin-left: 0;
+    margin-right: 0;
+}
