--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@ html
     font-family: 'Rubik', sans-serif;
 }
 
-body
+#content
 {
     background-color: white;
     width: 500px;
@@ -34,9 +34,10 @@ input
 
 button
 {
-    border-radius: 10px;
+    opacity: .6;
+    border-radius: 5px;
     color: black;
-    background-color: rgb(163, 82, 150);
+    background-color: rgb(187, 187, 187);
     display: block;
     margin-top: 1em;
     margin-right: auto;
@@ -69,4 +70,15 @@ button:hover
     display: block;
     margin-left: 0;
     margin-right: 0;
+}
+
+#foot
+{
+    text-align: center;
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    bottom: 0;
+    background-color: rgb(104, 51, 95);
+    left:0;
 }
